fixed overflow

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -70,8 +70,14 @@ h1, h2, h3, h4 {
     margin: 30px 0px 30px 0px;
 }
 
-.post h2 a, .post h2 a:visited {
+.post h2 a, .post h2 a:visited ,.post h2 a:link,.post h2 a:active{
     color: #000000;
+    text-decoration: none;
+}
+
+.post h2 a:hover{
+    color: #d06300;
+    text-decoration: none;
 }
 
 .comment {
@@ -390,4 +396,19 @@ h1 > span {
     box-shadow: 0 0 8px rgba(0,0,0,.1);
     vertical-align: middle;
     display: inline-block;
+}
+
+.post-content{
+/*    text-align: justify;*/
+/*text-justify: newspaper;*/
+word-break: break-all;
+}
+
+.post-abstract{
+    word-break: break-all;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp:2;
+    -webkit-box-orient:vertical;
 }
